--- a/tidy_data.Rmd
+++ b/tidy_data.Rmd
@@ -26,7 +26,7 @@ options(tibble.print_min=5)
 
 ## pivot_longer
 The package::function syntax lets you use a function from a package without loading the whole library.
-```{r}
+```{r message=FALSE}
 pulse_df = haven::read_sas('data/public_pulse_data.sas7bdat') %>% 
   janitor::clean_names()
 
@@ -48,7 +48,7 @@ pulse_tidy_data =
 
 ### Assessment
 * recode
-```{r}
+```{r message=FALSE}
 litters = read_csv('data/FAS_litters.csv') %>% 
   janitor::clean_names() %>% 
   select(litter_number,ends_with('weight')) %>% 
@@ -63,14 +63,14 @@ litters = read_csv('data/FAS_litters.csv') %>%
 ```
 
 * if_else
-```{r}
+```{r message=FALSE}
 litters = read_csv('data/FAS_litters.csv') %>% 
   janitor::clean_names() %>% 
   select(litter_number,ends_with('weight')) %>% 
   pivot_longer(
-    2:3,
-    names_to = 'gd',
-    values_to = 'weight'
+    2:3, # or:gd0_weight:gd18_weight (select columns)
+    names_to = 'gd', # old_col_names goes to new variable named 'gd'
+    values_to = 'weight' # old_col_values goes to new variable named 'weight'
   ) %>% 
   mutate(
     gd = if_else(.$gd=='gd0_weight',0,18)
@@ -78,7 +78,7 @@ litters = read_csv('data/FAS_litters.csv') %>%
 ```
 
 * replace
-```{r}
+```{r message=FALSE}
 litters = read_csv('data/FAS_litters.csv') %>% 
   janitor::clean_names() %>% 
   select(litter_number,ends_with('weight')) %>% 
@@ -133,7 +133,7 @@ lotr_tidy = bind_rows(fellowship_king,two_towers,return_king) %>%
 
 ## *_join
 
-```{r}
+```{r message=FALSE}
 pups = read_csv("data/FAS_pups.csv") %>% 
   janitor::clean_names() %>% 
   mutate(
@@ -155,7 +155,7 @@ fas_data = left_join(pups,litters,by = "litter_number")
 
 ### Assessment
 
-```{r}
+```{r message=FALSE}
 surv_os = read_csv("data/surv_os.csv") %>% 
   setNames(c("uni","os"))
 # change column names: setNames(df,c(newnamecol1,newnamecol2,...))
@@ -165,7 +165,8 @@ surv_prog = read_csv("data/surv_program_git.csv") %>%
 surv = full_join(surv_os,surv_prog,by = "uni")
 ```
 
-```{r}
+Answer:  
+```{r message=FALSE}
 surv_os = read_csv("data/surv_os.csv") %>% 
   janitor::clean_names() %>% #不仅变小写，而且加下划线
   rename(id = what_is_your_uni, os = what_operating_system_do_you_use)
